--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "history": "^5.3.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
     "react-redux": "^8.0.2",
